--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/fancy_skin_colorPrimary"></android.support.v7.widget.Toolbar>
+        android:background="@color/my_colorPrimary"></android.support.v7.widget.Toolbar>
 
     <ListView
         android:id="@+id/id_listview"
